--- a/GenealogySys/.classpath
+++ b/GenealogySys/.classpath
@@ -32,7 +32,7 @@
 	<classpathentry kind="lib" path="src/main/webapp/ueditor/jsp/lib/commons-codec-1.9.jar"/>
 	<classpathentry kind="lib" path="src/main/webapp/ueditor/jsp/lib/commons-fileupload-1.3.1.jar"/>
 	<classpathentry kind="lib" path="src/main/webapp/ueditor/jsp/lib/json.jar"/>
-	<classpathentry kind="lib" path="src/main/webapp/ueditor/jsp/lib/ueditor-1.1.2.jar"/>
 	<classpathentry kind="lib" path="src/main/webapp/WEB-INF/lib/pinyin4j-2.5.0.jar"/>
+	<classpathentry kind="lib" path="src/main/webapp/ueditor/jsp/lib/ueditor-1.1.2.jar" sourcepath="D:/Documents/Downloads/ueditor-extension-master.zip"/>
 	<classpathentry kind="output" path="target/classes"/>
 </classpath>
