--- a/GenealogySys/src/main/webapp/ueditor/jsp/config.json
+++ b/GenealogySys/src/main/webapp/ueditor/jsp/config.json
@@ -9,7 +9,7 @@
     "imageCompressBorder": 1600, /* 图片压缩最长边限制 */
     "imageInsertAlign": "none", /* 插入的图片浮动方式 */
     "imageUrlPrefix": "/GenealogySys", /* 图片访问路径前缀 */
-    "imagePathFormat": "/ueditor/image/{yyyy}{mm}{dd}/{yyyy}{mm}{dd}{hh}{ii}{ss}", /* 上传保存路径,可以自定义保存路径和文件名格式 */
+    "imagePathFormat": "/ueditor/image/{yyyy}{mm}{dd}{hh}{ii}{ss}", /* 上传保存路径,可以自定义保存路径和文件名格式 */
                                 /* {filename} 会替换成原文件名,配置这项需要注意中文乱码问题 */
                                 /* {rand:6} 会替换成随机数,后面的数字是随机数的位数 */
                                 /* {time} 会替换成时间戳 */
@@ -50,7 +50,7 @@
     "videoActionName": "uploadvideo", /* 执行上传视频的action名称 */
     "videoFieldName": "upfile", /* 提交的视频表单名称 */
     "videoPathFormat": "/ueditor/video/{yyyy}{mm}{dd}/{yyyy}{mm}{dd}{hh}{ii}{ss}", /* 上传保存路径,可以自定义保存路径和文件名格式 */
-    "videoUrlPrefix": "/GenealogySys", /* 视频访问路径前缀 */
+    "videoUrlPrefix": "/ConvenienceServiceWeb", /* 视频访问路径前缀 */
     "videoMaxSize": 102400000, /* 上传大小限制，单位B，默认100MB */
     "videoAllowFiles": [
         ".flv", ".swf", ".mkv", ".avi", ".rm", ".rmvb", ".mpeg", ".mpg",
@@ -60,7 +60,7 @@
     "fileActionName": "uploadfile", /* controller里,执行上传视频的action名称 */
     "fileFieldName": "upfile", /* 提交的文件表单名称 */
     "filePathFormat": "/ueditor/file/{yyyy}{mm}{dd}/{yyyy}{mm}{dd}{hh}{ii}{ss}", /* 上传保存路径,可以自定义保存路径和文件名格式 */
-    "fileUrlPrefix": "/GenealogySys", /* 文件访问路径前缀 */
+    "fileUrlPrefix": "/ConvenienceServiceWeb", /* 文件访问路径前缀 */
     "fileMaxSize": 51200000, /* 上传大小限制，单位B，默认50MB */
     "fileAllowFiles": [
         ".png", ".jpg", ".jpeg", ".gif", ".bmp",
