--- a/GenealogySys/.settings/org.eclipse.core.resources.prefs
+++ b/GenealogySys/.settings/org.eclipse.core.resources.prefs
@@ -2,4 +2,5 @@ eclipse.preferences.version=1
 encoding//src/main/java/cn/items/mssm/entity/StringUtil.java=UTF-8
 encoding//src/main/java/cn/items/mssm/mapper=UTF-8
 encoding//src/main/java/cn/items/mssm/service=UTF-8
+encoding//src/main/webapp/jsp/ImgUpload.jsp=UTF-8
 encoding//src/main/webapp/jsp/PicFile.jsp=UTF-8
